5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1771_1583.log
== TEST (2019-05-30 17:37:18) 
-- CODE:
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < size(v):
	if c[i + 1] % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while i < size(v):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:37:58) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < size(v):
	if c[i + 1] % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:38:31) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < size(v):
	if v[i + 1] % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:40:43) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < size(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:13) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < len(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:41:38) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < len(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:42:13) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < len(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
	print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 17:44:01) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < len(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
	i = i + 1
print(c)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 17:44:13) 
-- CODE:
from numpy import*
v = str(input("Digite sei la: "))
c = ""
i = 0 
while i < len(v):
	if (i + 1) % 3 == 0 and i < len(v) - 1:
		c = c + str(v[i]) + "."
	else:
		c = c + str(v[i])
	i = i + 1
print(c)

-- EXECUTION TIME:
1.29217
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
